# Sonar

./: .gitignore  PLAN.md  README.md  next.config.ts  package-lock.json  package.json
.claude/: settings.json
.github/workflows/: ci.yml
app/: layout.tsx  page.tsx
app/api/health/: route.ts
app/api/match/: route.ts
app/api/mcp/: route.ts
app/investor/[slug]/: page.tsx
components/: fit-gauge.tsx  investor-card.tsx  source-chip.tsx
docs/: DATA_SOURCES.md
lib/ai/: match.ts  schemas.ts
lib/ai/prompts/: v1.ts
lib/db/: index.ts  queries.ts  schema.ts
lib/mcp/: tools.ts
pipeline/: db.py  models.py  pyproject.toml  run.py
pipeline/extract/: chunk.py  embed.py  prompts.py  thesis.py
pipeline/sources/: fetch_blogs.py  fetch_rss.py  fetch_transcripts.py  seed_investors.yaml
scripts/: mcp-smoke.mjs
