[project]
name = "investor-pipeline"
version = "0.1.0"
description = "Offline ingestion pipeline: fetch public investor content, chunk, embed, extract theses/signals with provenance"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "trafilatura>=2.0",
    "feedparser>=6.0",
    "youtube-transcript-api>=1.0",
    "openai>=1.60",
    "pydantic>=2.10",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
pipeline = "run:main"

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py", "sources/", "extract/"]
